dropshot/tests/fail/bad_endpoint22.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, impl HttpResponseError>
  --> tests/fail/bad_endpoint22.rs:24:1
   |
24 | / async unsafe fn unsafe_endpoint(
25 | |     _rqctx: RequestContext<()>,
26 | |     _param1: Query<QueryParams>,
27 | | ) -> Result<HttpResponseOk<()>, HttpError> {
   | |__________________________________________^

error: endpoint `unsafe_endpoint` must not be unsafe
  --> tests/fail/bad_endpoint22.rs:24:7
   |
24 | async unsafe fn unsafe_endpoint(
   |       ^^^^^^
